Revision history for BSON

{{$NEXT}}

v1.6.5    2018-06-19 16:19:26-06:00 America/Denver

    [Bugs fixed]

    - PERL-941 Fix BSON::Time epoch conversion on perl w/o 64-bit ints

v1.6.4    2018-06-13 10:01:32-04:00 America/New_York

    [Documentation]

    - Clarified BSON type mapping table and BSON::Time SYNOPSIS

v1.6.3    2018-05-25 13:53:32-04:00 America/New_York

    [Bugs]

    - PERL-911 Implement 'bool' overloading for BSON::String to avoid
      the fallback implementation relying on numification and giving
      warnings.

v1.6.2    2018-05-24 12:43:06-04:00 America/New_York

    [Bugs]

    - [PERL-641] Fix back-compatible BSON::Timestamp constructor
      so that MongoDB::Timestamp can be an empty subclass of it.

v1.6.1    2018-05-17 13:41:11-04:00 America/New_York

    [Bugs]

    - [PERL-893] Fix 'prefer_numeric' handling of dual-vars to apply
      the heuristic only when no numeric form already exists.

    - [PERL-896] The 'epoch' method on BSON::Time was truncating to
      integers; it's now a floating point value as documented.

    - [PERL-896] Fixed PID generation within OIDs

v1.6.0    2018-05-15 09:41:21-04:00 America/New_York

    [Bugs]

    - [PERL-739] Validate Uint32 range on BSON::Timestamp components

    [New Feature]

    - [PERL-593] Add comparison overloading to BSON::OID

    - [PERL-688] Add create_oid class method 

    - [PERL-868] Add comparison overloading to BSON::Timestamp 

v1.4.0    2017-03-16 18:00:04-04:00 America/New_York

    [!!! Incompatible Changes !!!]

    - Minimum Perl version bumped up to v5.10.1 for byte-order modifiers
      for pack and unpack.

    [Bugs]

    - [PERL-694] - Tests fail on x86 (32-bit) without use64bitint perl

    [New Feature]

    - [PERL-751] - Support big-endian architectures

v1.2.2    2016-10-27 17:51:52-04:00 America/New_York

    [Changed]

    - Removed Module::Runtime prerequisite and improved error messages
      when no backends were loaded.

    [Testing]
