@@ -91,6 +91,15 @@ for my $c (@cmp_cases) {
     is( bson_timestamp(@$l) <=> bson_timestamp(@$r), $exp, "(@$l) <=> (@$r) == $exp" );
 }
 
+{
+    my @carping;
+    local $SIG{__WARN__} = sub { push @carping, @_ };
+    my $x;
+    is( $x <=> bson_timestamp(0,0), 0, "undef is treated like 0" );
+    is( $x <=> bson_timestamp(0,1), -1, "undef <=> bson_timestamp(0,1)" );
+    is( bson_timestamp(0,1) <=> $x, 1, "bson_timestamp(0,1) <=> undef" );
+}
+
 done_testing;
 
 # COPYRIGHT
