@@ -2,6 +2,10 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [Bugs fixed]
+
+    - PERL-943 Better handling of BSON::Timestamp comparison to undef
+
 v1.6.5    2018-06-19 16:19:26-06:00 America/Denver
 
     [Bugs fixed]
